auto_branch_pushes/ahmet/nested-pdr-ui/ppluto-main/overlays/dev_gke/deployment.yaml
kind: Rollout
apiVersion: argoproj.io/v1alpha1
metadata:
  name: ppluto-main
  labels:
    app.kubernetes.io/name: ppluto-main
spec:
  selector:
    matchLabels:
      app: ppluto-main
      app.kubernetes.io/name: ppluto-main
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: ppluto-main
        app.kubernetes.io/name: ppluto-main
    spec:
      topologySpreadConstraints:
        - maxSkew: 2
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: ppluto-main
          matchLabelKeys:
            - pod-template-hash
      terminationGracePeriodSeconds: 900 # 15min https://jenakim47.tistory.com/80

      containers:
        - name: ppluto-main--prod-server
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-server:12c38874b48e264936e19d2e2a3fc22b8322538d3cb6158c2182fd9cc14dc8da
          ports:
            - containerPort: 81
            - containerPort: 82
            - containerPort: 83
            - containerPort: 84
            - name: metrics
              containerPort: 9464
          readinessProbe:
            # TODO: Implement gRPC health check instead. https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#probe-check-methods
            tcpSocket:
              port: 82
          # TODO: Enable `livenessProbe`.  Temporarily disabled to debug container crash issue.
          # livenessProbe:
          #   tcpSocket:
          #     port: 82
          resources:
            requests:
              cpu: 0.5
              memory: 2Gi
            limits:
              cpu: 2
              memory: 4Gi
              ephemeral-storage: 8Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 1800"]
        - name: ppluto-main--prod-client-tickerbell
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-client-tickerbell:c2e448661d8fbc7909c6a5198c78103fdae5e0431c1737a45b455e5c36ff338a
          ports:
            - containerPort: 5095
          readinessProbe:
            httpGet:
              port: 5095
              path: /
          livenessProbe:
            httpGet:
              port: 5095
              path: /
          resources:
            requests:
              cpu: 0.5
              memory: 256Mi
            limits:
              cpu: 2
              memory: 512Mi
              ephemeral-storage: 1Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 1800"]
        - name: ppluto-main--prod-client
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-client:6d943c385a1f4261ef1e3ed7c6cfcd0e0757f021bfe9e6fc6f2e1bef0c20b69d
          ports:
            - containerPort: 5280
            - containerPort: 5380
            - containerPort: 5480
          resources:
            requests:
              cpu: 40m
              memory: 16Mi
            limits:
              cpu: 200m
              memory: 32Mi
              ephemeral-storage: 1Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 1800"]

      imagePullSecrets:
        - name: gitlab-container-registry
  strategy:
    blueGreen:
      activeService: ppluto-main-service-active
      previewService: ppluto-main-service-preview
      autoPromotionEnabled: true
