auto_branch_pushes/ahmet/nested-pdr-ui/ppluto-main/overlays/dev_gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress"
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - www.projectpluto.co
      - openembedding.com
      - ppluto.dev
      - "*.auto-branch-pushes.ppluto-main.ppluto.dev"
      secretName: ingress-tls-secret
  rules:
    # projectpluto.co (Company website)
    - host: ahmet--nested-pdr-ui---projectpluto.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 5380
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 82
          - path: /api-dk
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 84
    # theterminalx.com
    - host: ahmet--nested-pdr-ui---theterminalx.auto-branch-pushes.ppluto-main.ppluto.dev
      http: &terminalx-common-rules
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 82
          - path: /api/search
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 83
          - path: /api-dk
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 84
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 83
          - path: /api/encrypted-blob
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 83
          - path: /api/top-gainers
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 83
          - path: /api/news
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 83
          - path: /wsrvProxy
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-misc-service
                port:
                  number: 5088
          - path: /rss
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 83
          - path: /sitemap
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 83
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 5095
    - host: "*.ahmet--nested-pdr-ui---theterminalx.auto-branch-pushes.ppluto-main.ppluto.dev"
      http: *terminalx-common-rules

    # terminal.supersearchx.com
    - host: ahmet--nested-pdr-ui---terminal-supersearchx-com.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 5480
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 82
          - path: /api-dk
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 84

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress-for-sticky"
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/service.sticky: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: "gaia-session"
    # TODO: Migrate the following configs
    # alb.ingress.kubernetes.io/idle-timeout: "300" # idle timeout for ALB (TODO: reset to 60 and handle the long latency connection in the other way)
spec:
  tls:
    - hosts:
      - openembedding.com
      secretName: ingress-for-sticky-tls-secret
  rules:
    # openembedding.com (Project Gaia)
    - host: ahmet--nested-pdr-ui---gaia.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 5280
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 82
          - path: /api-dk
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 84

# TODO: Delete if no longer needed?
